[gd_scene load_steps=5 format=2]

[ext_resource path="res://ScenesNScripts/Properties/TextProperty.tscn" type="PackedScene" id=1]
[ext_resource path="res://ScenesNScripts/Buttons/RegularButton/RegularButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://ScenesNScripts/Buttons/ChangeButton/ChangeButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://ScenesNScripts/WorkoutCreatorScreen/WorkoutCreatorScreen.gd" type="Script" id=4]

[node name="WorkoutCreatorScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 158.0
margin_top = 170.0
margin_right = 562.0
margin_bottom = 1110.0
custom_constants/separation = 0

[node name="Name" parent="CenterContainer/VBoxContainer" instance=ExtResource( 1 )]

[node name="AddExerciseButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 200.0
margin_bottom = 270.0
text = "Add Exercise"

[node name="SaveButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 270.0
margin_bottom = 340.0
text = "Save"

[node name="ExerciseList" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 404.0
margin_bottom = 840.0
rect_min_size = Vector2( 0, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ExerciseList"]
margin_right = 404.0
margin_bottom = 292.0
alignment = 1

[node name="RegularButton" parent="CenterContainer/VBoxContainer/ExerciseList/VBoxContainer" instance=ExtResource( 2 )]
text = "------------"

[node name="RegularButton2" parent="CenterContainer/VBoxContainer/ExerciseList/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 74.0
margin_bottom = 144.0

[node name="RegularButton3" parent="CenterContainer/VBoxContainer/ExerciseList/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 148.0
margin_bottom = 218.0

[node name="RegularButton4" parent="CenterContainer/VBoxContainer/ExerciseList/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 222.0
margin_bottom = 292.0

[node name="DoneButton" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 840.0
margin_right = 404.0
margin_bottom = 940.0
text = "Done"
next_scene = "res://ScenesNScripts/Lists/WoList/WoList.tscn"

[connection signal="pressed" from="CenterContainer/VBoxContainer/AddExerciseButton" to="." method="_on_AddExerciseButton_pressed"]
